[package]
name = "murmur"
version = "1.0.1"
edition = "2021"

[dependencies]
# Async Runtime & HTTP Server
tokio = { version = "1.37.0", features = ["full"] }
axum = { version = "0.7.5" }
tower = { version = "0.4.13" }
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
tower_governor = "0.4.0"
reqwest = { version = "0.12.4", features = ["json"] }

# Database (Turso DB/libSQL embedded)
libsql = { version = "0.6.0" }

# Cryptography & Identity
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
rand = { version = "0.8.5", features = ["small_rng"] }
sha2 = "0.10.8"
sha3 = "0.10.8"
uuid = { version = "1.8.0", features = ["v4", "serde"] }

# Serialization
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
ciborium = "0.2.2"

# DHT Network & Geolocation
mainline = "6.2.0"
h3o = "0.6.0"
maxminddb = "0.24.0"

# Parallelism
rayon = "1.10.0"

# TUI Terminal UI
ratatui = "0.26.1"
crossterm = "0.27.0"

# Utilities
anyhow = "1.0.86"
chrono = "0.4.38"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
futures-util = "0.3.30"
sha1 = "0.11.0"
regex = "1.10.4"
hex = "0.4.3"
